--- a/cfg/.config
+++ b/cfg/.config
@@ -12,6 +12,6 @@
 "wiki_auth_url":"https://meta.wikimedia.org/w/rest.php/oauth2/access_token",
 "wiki_base_url":"https://api.wikimedia.org/core/v1/wikipedia/",
 "wiki_page_url":"https://en.wikipedia.org/?curid=",
-"db_create_wikipedia":"CREATE TABLE IF NOT EXISTS 'Wikipedia' ('id' INTEGER NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id'))",
-"db_create_youtube":"CREATE TABLE IF NOT EXISTS 'Youtube' ('id' INTEGER NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id'))"
+"db_create_wikipedia":"CREATE TABLE IF NOT EXISTS 'Wikipedia' ('id' INTEGER NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'search_text' TEXT NOT NULL,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id'))",
+"db_create_youtube":"CREATE TABLE IF NOT EXISTS 'Youtube' ('id' TEXT NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'wiki_id' INTEGER NOT NULL,'video_id' TEXT,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id','wiki_id'))"
 }
