--- a/cfg/config
+++ b/cfg/config
@@ -12,9 +12,11 @@
     "wiki_auth_url":"https://meta.wikimedia.org/w/rest.php/oauth2/access_token",
     "wiki_base_url":"https://api.wikimedia.org/core/v1/wikipedia/",
     "wiki_page_url":"https://en.wikipedia.org/?curid=",
+    "graph_types":["View_Counts_by_Topic","Bubble_by_Topic","All_Youtube_Views","View_Counts_by_Type","Bubble_by_Type","Wikipedia_Inventory","Wordcloud_by_Topic"],
     "DB_CREATION": [
      "CREATE TABLE IF NOT EXISTS 'view_counts' ('id' TEXT NOT NULL,'creation_date' INTEGER NOT NULL,'type' TEXT)",
      "CREATE TABLE IF NOT EXISTS 'Wikipedia' ('id' INTEGER NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'search_text' TEXT NOT NULL,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id'))",
-     "CREATE TABLE IF NOT EXISTS 'Youtube' ('id' TEXT NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'wiki_id' INTEGER NOT NULL,'video_id' TEXT,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id','wiki_id'))"
+     "CREATE TABLE IF NOT EXISTS 'Youtube' ('id' TEXT NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'wiki_id' INTEGER NOT NULL,'video_id' TEXT,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id','wiki_id'))",
+     "CREATE TABLE IF NOT EXISTS 'errors' ('id'	INTEGER NOT NULL,'creation_date' TEXT,'type' TEXT,'module_name'	TEXT,'error_text'	TEXT,PRIMARY KEY('id' AUTOINCREMENT))"
     ]
 }
