--- a/cfg/config
+++ b/cfg/config
@@ -18,6 +18,7 @@
      "CREATE TABLE IF NOT EXISTS 'view_counts' ('id' TEXT NOT NULL,'creation_date' INTEGER NOT NULL,'type' TEXT)",
      "CREATE TABLE IF NOT EXISTS 'Wikipedia' ('id' INTEGER NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'search_text' TEXT NOT NULL,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id'))",
      "CREATE TABLE IF NOT EXISTS 'Youtube' ('id' TEXT NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'wiki_id' INTEGER NOT NULL,'video_id' TEXT,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id','wiki_id'))",
-     "CREATE TABLE IF NOT EXISTS 'errors' ('id'	INTEGER NOT NULL,'creation_date' TEXT,'type' TEXT,'module_name'	TEXT,'error_text'	TEXT,PRIMARY KEY('id' AUTOINCREMENT))"
+     "CREATE TABLE IF NOT EXISTS 'errors' ('id'	INTEGER NOT NULL,'creation_date' TEXT,'type' TEXT,'module_name'	TEXT,'error_text'	TEXT,PRIMARY KEY('id' AUTOINCREMENT))",
+     "CREATE TABLE IF NOT EXISTS 'comments' ('id' INTEGER NOT NULL,'creation_date' TEXT,'user_email' TEXT,'comment' BLOB,PRIMARY KEY('id' AUTOINCREMENT))"
     ]
 }
