--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,42 @@
 archspec==0.2.3
+blinker==1.9.0
 boltons==24.0.0
 Brotli==1.1.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+click==8.1.8
 colorama==0.4.6
 conda_package_streaming==0.11.0
 conda==24.5.0
 conda-libmamba-solver==24.9.0
 conda-package-handling==2.4.0
+contourpy==1.3.1
 cryptography==44.0.2
+cycler==0.12.1
 distro==1.9.0
+Flask==3.1.0
+fonttools==4.56.0
 frozendict==2.4.6
 h2==4.1.0
 hpack==4.0.0
 hyperframe==6.0.1
 idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
+kiwisolver==1.4.8
 libmambapy==1.5.8
 mamba==1.5.8
+MarkupSafe==3.0.2
+matplotlib==3.10.1
 menuinst==2.1.2
 ndg-httpsclient==0.5.1
+numpy==2.2.3
 packaging==24.2
+pillow==11.1.0
 pip==25.0.1
 platformdirs==4.3.6
 pluggy==1.5.0
@@ -32,7 +46,10 @@ pycosat==0.6.6
 pycparser==2.22
 PyNaCl==1.5.0
 pyOpenSSL==25.0.0
+pyparsing==3.2.1
 PySocks==1.7.1
+pytest==8.3.5
+python-dateutil==2.9.0.post0
 requests==2.32.3
 ruamel.yaml.clib==0.2.8
 ruamel.yaml==0.18.6
@@ -42,6 +59,8 @@ tqdm==4.67.1
 truststore==0.10.0
 typing_extensions==4.12.2
 urllib3==2.2.3
+Werkzeug==3.1.3
 wheel==0.45.1
 win_inet_pton==1.1.0
+wordcloud==1.9.4
 zstandard==0.23.0
