--- a/cfg/config
+++ b/cfg/config
@@ -12,15 +12,30 @@
     "wiki_auth_url":"https://meta.wikimedia.org/w/rest.php/oauth2/access_token",
     "wiki_base_url":"https://api.wikimedia.org/core/v1/wikipedia/",
     "wiki_page_url":"https://en.wikipedia.org/?curid=",
-    "graph_cfg":{"Wikipedia_Inventory":"wiki_inventory_by_topic","Viewing_Habits":"viewing_habits","View_Counts_by_Topic":"views_by_topic","All_Youtube_Views":"all_youtube_views","View_Counts_by_Type":"wiki_youtube_views","Bubble_by_Type":"bubble_by_type","Wordcloud_by_Topic":"views_wordcloud"},
     "PUSHER":{"connectivity":{"app_id":"99999","key":"99999","secret":"99999","cluster":"us3","ssl":"True"},
           "channels":[]},
-    "DB_CREATION": [
-     "CREATE TABLE IF NOT EXISTS 'view_counts' ('id' TEXT NOT NULL,'creation_date' INTEGER NOT NULL,'type' TEXT)",
-     "CREATE TABLE IF NOT EXISTS 'Wikipedia' ('id' INTEGER NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'search_text' TEXT NOT NULL,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id'))",
-     "CREATE TABLE IF NOT EXISTS 'Youtube' ('id' TEXT NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'wiki_id' INTEGER NOT NULL,'video_id' TEXT,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id','wiki_id'))",
-     "CREATE TABLE IF NOT EXISTS 'errors' ('id'	INTEGER NOT NULL,'creation_date' TEXT,'type' TEXT,'module_name'	TEXT,'error_text'	TEXT,PRIMARY KEY('id' AUTOINCREMENT))",
-     "CREATE TABLE IF NOT EXISTS 'comments' ('id' INTEGER NOT NULL,'creation_date' TEXT,'user_email' TEXT,'comment' BLOB,PRIMARY KEY('id' AUTOINCREMENT))",
-     "CREATE TABLE IF NOT EXISTS 'site_traffic_init' ('id' INTEGER NOT NULL,'creation_date' TEXT NOT NULL,'route' TEXT NOT NULL,'display_date' TEXT NOT NULL,PRIMARY KEY('id' AUTOINCREMENT))"
+    "graph_cfg":{"Inventory":"wiki_inventory_by_topic","Inventory_Change":"inventory_volatility_heatmap","Viewing_Habits":"viewing_habits","View_Counts_by_Topic":"views_by_topic","Viewing_3d":"viewing_surface_3d","All_Youtube_Views":"all_youtube_views","Wordcloud_by_Topic":"views_wordcloud"},
+    "DB_CREATION_old": [
+    "CREATE TABLE IF NOT EXISTS 'view_counts' ('id' TEXT NOT NULL,'creation_date' INTEGER NOT NULL,'type' TEXT)",
+    "CREATE TABLE IF NOT EXISTS 'Wikipedia' ('id' INTEGER NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'search_text' TEXT NOT NULL,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id'))",
+    "CREATE TABLE IF NOT EXISTS 'Youtube' ('id' TEXT NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'wiki_id' INTEGER NOT NULL,'video_id' TEXT,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id','wiki_id'))",
+    "CREATE TABLE IF NOT EXISTS 'errors' ('id' INTEGER NOT NULL,'creation_date' TEXT,'type' TEXT,'module_name' TEXT,'error_text' TEXT,PRIMARY KEY('id' AUTOINCREMENT))",
+    "CREATE TABLE IF NOT EXISTS 'comments' ('id' INTEGER NOT NULL,'creation_date' TEXT,'user_email' TEXT,'comment' BLOB,PRIMARY KEY('id' AUTOINCREMENT))",
+    "CREATE TABLE IF NOT EXISTS 'site_traffic_init' ('id' INTEGER NOT NULL,'creation_date' TEXT NOT NULL,'route' TEXT NOT NULL,'display_date' TEXT NOT NULL,PRIMARY KEY('id' AUTOINCREMENT))"
+    ],
+    "APP_DB_CREATION": [
+    "CREATE TABLE IF NOT EXISTS 'Wikipedia' ('id' INTEGER NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'search_text' TEXT NOT NULL,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id'))",
+    "CREATE TABLE IF NOT EXISTS 'Youtube' ('id' TEXT NOT NULL DEFAULT 1 UNIQUE,'creation_date' INTEGER NOT NULL,'wiki_id' INTEGER NOT NULL,'video_id' TEXT,'title' TEXT NOT NULL,'url' TEXT NOT NULL,'description' TEXT,'thumbnail' BLOB,PRIMARY KEY('id','wiki_id'))",
+    "CREATE TABLE IF NOT EXISTS 'errors' ('id' INTEGER NOT NULL,'creation_date' TEXT,'type' TEXT,'module_name' TEXT,'error_text' TEXT,PRIMARY KEY('id' AUTOINCREMENT))",
+    "CREATE TABLE IF NOT EXISTS 'page_views' ('id' INTEGER PRIMARY KEY AUTOINCREMENT,'page_id' INTEGER NOT NULL,'viewed_at' TEXT NOT NULL,FOREIGN KEY (page_id) REFERENCES Wikipedia(id))",
+    "CREATE TABLE IF NOT EXISTS 'video_views' ('id' INTEGER PRIMARY KEY AUTOINCREMENT,'video_id' TEXT NOT NULL,'viewed_at' TEXT NOT NULL,FOREIGN KEY (video_id) REFERENCES Youtube(id))",
+    "CREATE INDEX 'idx_page_views_page_id' ON page_views(page_id)",
+    "CREATE INDEX 'idx_video_views_video_id' ON video_views(video_id)",
+    "CREATE INDEX 'idx_page_views_date' ON page_views(viewed_at)",
+    "CREATE INDEX 'idx_video_views_date' ON video_views(viewed_at)"
+    ],
+    "SITE_DB_CREATION": [
+    "CREATE TABLE IF NOT EXISTS 'comments' ('id' INTEGER NOT NULL,'creation_date' TEXT,'user_email' TEXT,'comment' BLOB,PRIMARY KEY('id' AUTOINCREMENT))",
+    "CREATE TABLE IF NOT EXISTS 'site_traffic_init' ('id' INTEGER NOT NULL,'creation_date' TEXT NOT NULL,'route' TEXT NOT NULL,'display_date' TEXT NOT NULL,PRIMARY KEY('id' AUTOINCREMENT))"
     ]
 }
